update install page to point to http URL on matrixfrog.github.com

--- a/install_kiwisearch.htm
+++ b/install_kiwisearch.htm
@@ -1,5 +1,5 @@
 <html>
 
-  <button onclick="javascript:window.external.AddSearchProvider('file:///C:/_projects/nonwork/kiwisearch/kiwisearch.xml');">click to install kiwidoc search</button>
+  <button onclick="javascript:window.external.AddSearchProvider('http://matrixfrog.github.com/kiwisearch/kiwisearch.xml');">click to install kiwidoc search</button>
 
 </html>
